ikubernetes_1.21.2/user-kubernetes/ingress/port-ingress-v2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: port-ingress-v2
spec:
  rules:
  - host: test.k8s.io
    http:
      paths:
      - path:
        backend:
          serviceName: port-ingress-v2-service    
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: port-ingress-v2-service
spec:
  selector:
    app: port-ingress-v2
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port-ingress-v2-deployment
spec:
  selector:
    matchLabels:
      app: port-ingress-v2
  replicas: 2
  template:
    metadata:
      labels:
        app: port-ingress-v2
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1
